--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 .project
+config/mongoid.yml
+config/deploy.rb
+config/production.sphinx.conf
+config/development.sphinx.conf
